syntax = "proto3";
package secret.usc.v1beta1;

option go_package = "github.com/enigmampc/SecretNetwork/x/usc/types";
option (gogoproto.equal_all) = false;
option (gogoproto.goproto_getters_all) = false;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "cosmos/base/v1beta1/coin.proto";

// Msg defines the x/usc Msg service.
service Msg {
  // MintUSC defines a method for converting collateral coins into USC coin.
  rpc MintUSC(MsgMintUSC) returns (MsgMintUSCResponse);

  // RedeemCollateral defines a method for converting USC coin into collateral coins from the module pool.
  rpc RedeemCollateral(MsgRedeemCollateral) returns (MsgRedeemCollateralResponse);
}

// MsgMintUSC defines a SDK message for the Msg/MintUSC request type.
message MsgMintUSC {
  // address is the Bech32-encoded address of the target account.
  string address = 1 [
    (gogoproto.moretags) = "yaml:\"address\""
  ];

  // collateral_amount are collateral token that should be exchanged to USC.
  repeated cosmos.base.v1beta1.Coin collateral_amount = 2 [
    (gogoproto.moretags) = "yaml:\"collateral_amount\"",
    (gogoproto.nullable) = false
  ];
}

// MsgMintUSCResponse defines the Msg/MintUSC response type.
message MsgMintUSCResponse {
  // minted_amount is a minted USC token.
  cosmos.base.v1beta1.Coin minted_amount = 1 [
    (gogoproto.moretags) = "yaml:\"minted_amount\"",
    (gogoproto.nullable) = false
  ];

  // collaterals_amount are collateral tokens used for the mint.
  repeated cosmos.base.v1beta1.Coin collaterals_amount = 2 [
    (gogoproto.moretags) = "yaml:\"collaterals_amount\"",
    (gogoproto.nullable) = false
  ];
}

// MsgRedeemCollateral defines a SDK message for the Msg/RedeemCollateral request type.
message MsgRedeemCollateral {
  // address is the Bech32-encoded address of the target account.
  string address = 1 [
    (gogoproto.moretags) = "yaml:\"address\""
  ];

  // usc_amount is the USC token that should be exchanged to collateral tokens.
  cosmos.base.v1beta1.Coin usc_amount = 2 [
    (gogoproto.moretags) = "yaml:\"amount\"",
    (gogoproto.nullable) = false
  ];
}

// MsgMintUSCResponse defines the Msg/RedeemCollateral response type.
message MsgRedeemCollateralResponse {
  // burned_amount is the USC token converted amount (might be LT the requested amount).
  cosmos.base.v1beta1.Coin burned_amount = 1 [
    (gogoproto.moretags) = "yaml:\"burned_amount\"",
    (gogoproto.nullable) = false
  ];

  // redeemed_amount are collateral tokens that are transferred to an account after the redeeming timout.
  repeated cosmos.base.v1beta1.Coin redeemed_amount = 2 [
    (gogoproto.moretags) = "yaml:\"redeemed_amount\"",
    (gogoproto.nullable) = false
  ];

  // completion_time defines the redeeming period end time.
  google.protobuf.Timestamp completion_time = 3 [
    (gogoproto.moretags) = "yaml:\"completion_time\"",
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true
  ];
}
